<resources>
    <string name="app_name">noobdroid</string>
    <string name="sports">Sports</string>
    <string name="sport">Sport</string>
    <string name="sportsman">Sportsman</string>
    <string name="team">Team</string>
    <string name="race">Race</string>
    <string name="insert">Insert</string>
    <string name="modify">Modify</string>
    <string name="delete">delete</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="teamgame">Team Game</string>
    <string name="malegame">Male Game</string>
    <string name="cancel">Cancel</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="headquarters">Headquarters</string>
    <string name="country">Country</string>
    <string name="birthyear">Birth Year</string>
    <string name="stadium">Stadium</string>
    <string name="establishyear">Establish Year</string>
    <string name="addplayers">Add Players</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Noobdroid</string>
    <string name="nav_header_subtitle">Welcome to Noobdroid</string>
    <string name="home">Home</string>
    <string name="noobdroid">Noobdroid</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="modifyteam">Modify Team</string>
    <string name="insertteam">Insert Team</string>
    <string name="addplayerteam">Add Player</string>
    <string name="insertsport">Insert Sport</string>
    <string name="modifysport">Modify Sport</string>
    <string name="insertsportsman">Insert Sportsman</string>
    <string name="modifysportsman">Modify Sportsman</string>
    <string name="database">Database</string>
    <string name="field">Field</string>
    <string name="result">Result</string>
    <string name="comparison">Comparison</string>
    <string name="comparisonvalue">Value</string>
    <string name="toggle_theme">Toggle Theme</string>
    <string name="about">About</string>
    <string name="creators">Creators:</string>
    <string name="dev1">Dimitris Tzikas</string>
    <string name="dev2">nikdimi
</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city">City</string>>
    <string name="date">Date</string>
    <string name="view" />
</resources>