<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainFragment"
            android:icon="@drawable/home"
            android:title="@string/home"/>
        <item
            android:id="@+id/sportFragment"
            android:icon="@drawable/sport"
            android:title="@string/sport" />
        <item
            android:id="@+id/sportsmanFragment"
            android:icon="@drawable/sportsman"
            android:title="@string/sportsman" />
        <item
            android:id="@+id/teamFragment"
            android:icon="@drawable/team"
            android:title="@string/team" />
        <item
            android:id="@+id/raceFragment"
            android:icon="@drawable/race"
            android:title="@string/race"/>
    </group>
</menu>